--- a/action.yml
+++ b/action.yml
@@ -36,7 +36,7 @@ runs:
         [ ! -x /home/runner/go/bin/dnsx ] && GO111MODULE=on go get -v github.com/projectdiscovery/dnsx/cmd/dnsx@v1.0.4
         [ ! -z ${{ inputs.list }} ] && echo "list=-l ${{ inputs.list}}" >> $GITHUB_ENV
         [ ! -z ${{ inputs.output }} ] && echo "output=-o ${{ inputs.output}}" >> $GITHUB_ENV || echo "output=-o dnsx.log" >> $GITHUB_ENV
-        [ ! -z ${{ inputs.flags }} ] && echo "flags=${{ inputs.flags }}" >> $GITHUB_ENV
+        [ ! -z "${{ inputs.flags }}" ] && echo "flags=${{ inputs.flags }}" >> $GITHUB_ENV
         [ ! -z ${{ inputs.resolver }} ] && echo "resolver=-r ${{ inputs.resolver}}" >> $GITHUB_ENV
         ${{ inputs.json }} && echo "json=-json" >> $GITHUB_ENV
         echo "/home/runner/go/bin/" >> $GITHUB_PATH
